Fixed panel moving out of screen bug
Board has scale of 0.5 for screens less than lg.
Removed Home and Full screen buttons.
Loading icon animation transparent background.

--- a/app/src/components/Loading/styles.css
+++ b/app/src/components/Loading/styles.css
@@ -41,7 +41,7 @@
   height: 80px;
   display: inline-block;
   overflow: hidden;
-  background: #ffffff;
+  background: transparent;
 }
 .ldio-42ninjqcgp4 {
   width: 100%;
